Loosen up language/erlang assertions :tada: :bomb: commit-range=d2af1214c206e81ad7e9dba93fb4a35a0cbd02ad...05516042558b677a96dec2d42c3d26203df8942a

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ before_install:
   ; sudo docker version ; fi
 install:
 - git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf d2af1214c206 ; popd
+- pushd packer-templates && git checkout -qf 05516042558b677a96dec2d42c3d26203df8942a
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-amethyst"
