--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ before_install:
   /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
   ; sudo docker version ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 6f9c5ba89b149f0e6a370d96a1d46d2f858fcd58
-  ; popd
+- git clone --branch="meat-spec-integration-tightening" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 53ee615c5ba0 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-amethyst"
