Fix YAML dump/load of job-board attrs
and:
- remove outdated `push:` defs from all packer templates
- start filling in better template docs in the `README.md`
- add make targets for listing languages by ubuntu target
:tada: :bomb: commit-range=6f9c5ba89b14...53ee615c5ba0

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ before_install:
   /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
   ; sudo docker version ; fi
 install:
-- git clone --branch="" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf HEAD ; popd
+- git clone --branch="meat-spec-integration-tightening" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 53ee615c5ba0 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script internal-bastion"
