--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ before_install:
   /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
   ; sudo docker version ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 65fd2e2c7dfac672d52b2b37a6dc283f0d894ebe
-  ; popd
+- git clone --branch="meat-serverspec-combination" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 65fd2e2c7dfa ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-php"
