Move rvm out of basic feature set
and explicitly add it to amethyst features, changing expected version matcher to
work for both 1.9.3 and 2.3.1
:tada: :bomb: commit-range=1fcaa21a24dd...b733d3837927

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ before_install:
   /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
   ; sudo docker version ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 1fcaa21a24dd81d1e485b3955aaff11b947af11c
-  ; popd
+- git clone --branch="meat-serverspec-combination" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf b733d3837927 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-amethyst"
