--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ before_install:
   /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
   ; sudo docker version ; fi
 install:
-- git clone --branch="meat-serverspec-combination" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf b733d3837927 ; popd
+- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf b733d38379273ea9bb4034166aeed311241630db
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-amethyst"
