--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ before_install:
   /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
   ; sudo docker version ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 40fc674c8f949430a801f837cf7c86ee341ae610
-  ; popd
+- git clone --branch="meat-serverspec-combination" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf b24378bdefd2 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-connie"
