--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ before_install:
   /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
   ; sudo docker version ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf ba18f888fbe068edfc6d23b838648c9202264be7
-  ; popd
+- git clone --branch="meat-sphinx-switch" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 68d9ad52867f ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-connie"
