Hardcode cookbooks branch in the right place :tada: :bomb: commit-range=21bdc7ea9533...695f734961ec

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ before_install:
   /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
   ; sudo docker version ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 01836acca469 ; popd
+- git clone --branch="meat-sphinx-switch" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 695f734961ec ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-connie"
