--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,8 @@ before_install:
   /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
   ; sudo docker version ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 987e23ae1cdc0d84d702b44a07f855009c1d8137
-  ; popd
+- git clone --branch="meat-gcr" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 987e23ae1cdc ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-connie"
