Add better logging and timing for docker push
and do similar for job-board-register while I'm thinking about it
:tada: :bomb: commit-range=3cc14298a5af8c2fc03e1f807abe2625e395ff20...c65c72e2c2d23dbb36700cb458bac50e07ce3cd8

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ before_install:
   /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
   ; sudo docker version ; fi
 install:
-- git clone --branch="meat-quay" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf c65c72e2c2d2 ; popd
+- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf c65c72e2c2d23dbb36700cb458bac50e07ce3cd8
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-amethyst"
