--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,16 @@ dist: trusty
 group: edge
 sudo: true
 before_install:
-- if [[ $BUILDER = docker ]] ; then sudo stop docker ; sudo cat /etc/default/docker
-  ; echo 'DOCKER_OPTS="$DOCKER_OPTS --storage-opt dm.basesize=20G"' | sudo tee -a
-  /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
-  ; sudo docker version ; fi
+- sudo apt-get update -yqq
+- sudo apt-get purge -o Dpkg::Options::="--force-confnew" -yqq docker-engine
+- sudo apt-get install -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2
+  xfsprogs
+- echo 'DOCKER_OPTS="$DOCKER_OPTS --storage-driver devicemapper"' | sudo tee -a /etc/default/docker
+- sudo service docker restart
 install:
-- git clone --branch="meat-quay" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 4ff212189fa4 ; popd
+- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 01a52e3bf70291210787df41f9db6d14fe4989f9
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-php"
