Remove more stuff that was dropped in travis_build_environment consolidation :tada: :bomb: commit-range=887b94c90d1a...49355d4ba271

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 887b94c90d1ababcf124e4066382c48921561b08
-  ; popd
+- git clone --branch="meat-tbe-trim" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 49355d4ba271 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-garnet"
