Remove more stuff that was dropped in travis_build_environment consolidation :tada: :bomb: commit-range=6f260446c8739dca26ea12dee656c71b53f7873f...49355d4ba2716888d24936eb1bbcee6a2860f074

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-tbe-trim" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 49355d4ba271 ; popd
+- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 49355d4ba2716888d24936eb1bbcee6a2860f074
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-connie"
