Trivial change for a bumpety bump :tada: :bomb: commit-range=6f260446c8739dca26ea12dee656c71b53f7873f...b2d25b16b3061c362a723ad829d16b003b9fb72b

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-tbe-trim" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf e138aa784b4f ; popd
+- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf b2d25b16b3061c362a723ad829d16b003b9fb72b
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-amethyst"
