--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf b2d25b16b3061c362a723ad829d16b003b9fb72b
-  ; popd
+- git clone --branch="meat-tbe-trim" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf e3055f04c45f ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-garnet"
