Fold rvm feature into basic :tada: :bomb: commit-range=6f260446c8739dca26ea12dee656c71b53f7873f...e3055f04c45ff4c64049e9764cbbe95470753d00

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-tbe-trim" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf e3055f04c45f ; popd
+- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf e3055f04c45ff4c64049e9764cbbe95470753d00
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-amethyst"
