Refine job-board registraton post-processor
and switch remaining templates to use it instead of the provision-time
registration.
:tada: :bomb: commit-range=6969956e44f9d86724cdfe3b455b0cd74941f665...6a29bd92099fcf5ff6addec91eb59f5123d2bd19

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-job-board-post-processor" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 6a29bd92099f ; popd
+- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 6a29bd92099fcf5ff6addec91eb59f5123d2bd19
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-amethyst"
