--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,14 @@ dist: trusty
 group: edge
 sudo: true
 before_install:
-- if [[ $BUILDER = docker ]] ; then sudo stop docker ; sudo cat /etc/default/docker
-  ; echo 'DOCKER_OPTS="$DOCKER_OPTS --storage-opt dm.basesize=20G"' | sudo tee -a
-  /etc/default/docker ; sudo cat /etc/default/docker ; sudo start docker ; sleep 5
-  ; sudo docker version ; fi
+- if [[ "x${BUILDER}" = "xdocker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
+  purge -o Dpkg::Options::="--force-confnew" -yqq docker-engine ; sudo apt-get install
+  -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
+  --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
+  docker restart ; fi
 install:
-- git clone --branch="" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf HEAD ; popd
+- git clone --branch="meat-job-board-post-processor" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 6a29bd92099f ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script tmate-edge"
