Consolidate some of the image metadata export/import :tada: :bomb: commit-range=600b3d9e33c4...a865a65b7b5c

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf a865a65b7b5cc7ace29131bfe4ed5dae2a1b87ef
-  ; popd
+- git clone --branch="meat-job-board-post-processor" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf a865a65b7b5c ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-php"
