--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 89dd4657a65b03a68259742241eb9e208b3ec780
-  ; popd
+- git clone --branch="meat-precise-whackamole" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 63895c508a3f ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-garnet"
