Correctly break on success egad :tada: :bomb: commit-range=7d7c96cdf1e5584f01396f675ba35f159ec2c235...63895c508a3f76df226ff5b5c71ac18ddfd5dc05

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-precise-whackamole" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 63895c508a3f ; popd
+- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 63895c508a3f76df226ff5b5c71ac18ddfd5dc05
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-php"
