Soften assertion about system ruby version :tada: :bomb: commit-range=8fb570ca52dfbdf02060fe684017d5277773c098...d198c18ab4980f701e53c17936885b2c2249a135

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ before_install:
   docker restart ; fi
 install:
 - git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 8fb570ca52df ; popd
+- pushd packer-templates && git checkout -qf d198c18ab4980f701e53c17936885b2c2249a135
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-garnet"
