Test out post-processor script change detection :tada: :bomb: commit-range=3b53e4779751982003bb51ba1b9655ba28ede69f...c81d790ad99246a86d7f161229dc16c01d50fbbf

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-multi-group" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 7132b918abf6 ; popd
+- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf c81d790ad99246a86d7f161229dc16c01d50fbbf
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - "./packer-templates/bin/packer-build-script ci-garnet"
