--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 1c8308e8615d5fdef7cee6a471f3d3b0a3c58136
-  ; popd
+- git clone --branch="meat-precise-bump" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 1c8308e8615d ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="meat-precise-bump"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 env:
   matrix:
