Skip bats tests on precise :tada: :bomb: commit-range=4c9d683353296de38d28cc39919e890ae52f3ad1...d76904c0786f1f6446b88334b11f84ca2e7a5830

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-precise-bump" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 1c8308e8615d ; popd
+- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf d76904c0786f1f6446b88334b11f84ca2e7a5830
+  ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-precise-bump"
+- export PACKER_TEMPLATES_BRANCH="master"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 env:
   matrix:
