--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf b591861416bed4e91c1a0b12ddefa4f5ba4e6f4a
-  ; popd
+- git clone --branch="meat-precise-bump" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf b591861416be ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="meat-precise-bump"
 - "./packer-templates/bin/packer-build-script ci-garnet"
 env:
   matrix:
